# py2appsigner

./: .gitignore  .mypi.ini  .travis.yml  README.md  pyproject.toml  requirements.txt  setup.py
.circleci/: config.yml
.github/workflows/: python-publish.yml
py2appsigner/: AppNotarize.py  AppSign.py  ApplicationNotarize.py  ApplicationSign.py  ApplicationStaple.py  ApplicationVerify.py  BaseCommand.py  CommandBase.py  CommandBasic.py  CommandExtended.py  Commands.py  Common.py  Environment.py  Notary.py  ZipSign.py
py2appsigner/environment/: BasicEnvironment.py  Environment.py  NotaryEnvironment.py
src/py2appsigner/: ApplicationVerify.py  CommandBasic.py  Commands.py  ZipSign.py  __init__.py  _version.py
src/py2appsigner/environment/: NotaryEnvironment.py
src/py2appsigner/resources/: loggingConfiguration.json
tests/: TestAll.py  TestBase.py  TestCommands.py  TestTemplate.py
tests/py2appsigner/: TestBasicEnvironment.py
tests/py2appsigner/environment/: TestBasicEnvironment.py  TestEnvironment.py
tests/resources/: testLoggingConfiguration.json
